--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 33
+    compileSdk 32
     namespace "com.toan.musicapp"
     defaultConfig {
         applicationId "com.toan.musicapp"
-        minSdkVersion 26
-        targetSdkVersion 33
+        minSdkVersion 25
+        //noinspection ExpiredTargetSdkVersion
+        targetSdk 25
         versionCode 1
         versionName "1.0"
 
@@ -27,30 +28,30 @@ dependencies {
 
     implementation platform('com.google.firebase:firebase-bom:31.0.2')
     implementation 'com.google.firebase:firebase-database'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
+    //noinspection GradleDependency
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-storage:20.1.0'
-    implementation 'com.google.firebase:firebase-auth:21.1.0'
+    implementation 'com.google.firebase:firebase-auth'
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     //noinspection GradleCompatible
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:appcompat-v7:23.2.1'
     //noinspection GradleCompatible
     implementation 'com.android.support:support-media-compat:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.appcompat:appcompat-resources:1.3.1'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     //noinspection GradleDependency
     implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'com.google.android.gms:play-services-auth:20.3.0'
-    implementation 'com.google.android.gms:play-services-gcm:17.0.0'
     implementation 'com.google.code.gson:gson:2.9.0'
-    implementation 'com.facebook.android:facebook-login:5.15.3'
     implementation group: 'at.favre.lib', name: 'bcrypt', version: '0.9.0'
     implementation 'com.google.android.material:material:1.8.0-alpha02'
     //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
+
 }
 apply plugin: 'com.google.gms.google-services'
